# clawhip

./: Cargo.toml  README.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
.omx/: metrics.json  notepad.md  tmux-hook.json
.omx/context/: clawhip-build-20260308T103330Z.md
.omx/logs/: hooks-2026-03-08.jsonl  notify-fallback-2026-03-08.jsonl  omx-2026-03-08.jsonl
.omx/plans/: autopilot-impl.md  autopilot-spec.md
.omx/state/: hud-state.json  notify-fallback-state.json  notify-fallback.pid  session.json  update-check.json
.omx/state/sessions/omx-1772965833622-69uz5f/: AGENTS.md  autopilot-state.json
docs/: memory-offload-architecture.md  memory-offload-guide.md
docs/examples/: MEMORY.example.md
docs/examples/memory/: README.example.md
docs/examples/memory/channels/: example-channel.md
docs/examples/memory/daily/: 2026-03-10.md
docs/examples/memory/projects/: clawhip.md
docs/examples/memory/topics/: lessons.md  rules.md
skills/memory-offload/: SKILL.md
src/: cli.rs  client.rs  config.rs  daemon.rs  discord.rs  dispatch.rs  events.rs  keyword_window.rs  lifecycle.rs  main.rs  monitor.rs  router.rs  server.rs  tmux_wrapper.rs
src/event/: body.rs  compat.rs
src/render/: default.rs  mod.rs
src/sink/: discord.rs  mod.rs
src/source/: git.rs  github.rs  mod.rs  tmux.rs
