[package]
name = "clawhip"
version = "0.1.2"
edition = "2024"
description = "Event-to-channel notification router for Discord — bypass gateway sessions, just events in, messages out"
license = "MIT"
repository = "https://github.com/Yeachan-Heo/clawhip"
keywords = ["discord", "notifications", "tmux", "github", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.15"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
